// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> Default story renders snapshot 1`] = `
<section
  class="css-gooz0n"
>
  <div
    class="css-15mzwbv"
  />
  <div
    class="css-rt82e2"
  >
    <h1
      class="css-1d31fnh"
    >
      Header Text
    </h1>
    <p
      class="css-1mp5y5k"
    >
      Caption text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
    </p>
  </div>
</section>
`;

exports[`<Hero /> FullFeatured story renders snapshot 1`] = `
<section
  class="css-1ub8z4s"
>
  <div
    class="css-1rby8s"
  >
    <video
      autoplay=""
      loop=""
      playsinline=""
      src="https://storage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
    />
  </div>
  <div
    class="css-1i564sy"
  />
  <div
    class="css-c5lxwm"
  >
    <div
      class="css-gpqmd"
    >
      <img
        alt="Hero Overlay Media"
        src="https://picsum.photos/1000"
      />
    </div>
  </div>
  <div
    class="css-1nsifnq"
  >
    <h1
      class="css-1d31fnh"
    >
      Header Text
    </h1>
    <p
      class="css-1mp5y5k"
    >
      Caption text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
    </p>
    <div
      class="css-1vchscq"
    >
      <div
        class="css-cgeh0p"
      >
        Content Slot (childNode)
      </div>
    </div>
  </div>
  <div
    class="css-ewvctc"
  />
</section>
`;
